--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "stylus": "^0.54.5",
     "vue": "^2.3.3",
-    "vue-router":"^2.7.0"
+    "vue-router": "^2.7.0",
+    "vue-resource":"^1.3.4"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -24,7 +26,7 @@
     "chalk": "^2.0.1",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.0",
+    "css-loader": "^0.28.4",
     "cssnano": "^3.10.0",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.14.1",
