--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "stylus": "^0.54.5",
     "vue": "^2.3.3",
     "vue-router": "^2.7.0",
-    "vue-resource":"^1.3.4"
+    "vue-resource":"^1.3.4",
+    "better-scroll":"^1.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
